--- a/views/style.css
+++ b/views/style.css
@@ -133,3 +133,31 @@ footer {
   border: 0;
   border-radius: 20px;
 }
+
+div.webkit {
+	position: fixed;
+	top: 5px;
+	border: 2px solid #fa5;
+	background: #c63;
+	border-radius: 16px;
+	padding: 8px;
+	margin: auto;
+	left: 20%;
+	right: 20%;
+}
+
+div.webkit[disabled] {
+  display: none;
+}
+
+warn {
+  font-size: 2em;
+}
+
+warn.r {
+  float: right;
+}
+
+warn.l {
+  float: left;
+}
