Changed the warning message

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 <flag class="p"></flag>
 <flag class="b"></flag>
 <br />
-<center><div class="webkit"><warn class="r">⚠️</warn><warn class="l">⚠️</warn>Oops! It seems like your browser may not be up to date with Xenia's!<br /> She suggests you use <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> for better safety and comfort.</div>
+<center><div class="webkit"><warn class="r">⚠️</warn><warn class="l">⚠️</warn>Xenia suggests you use <a href="https://www.mozilla.org/en-US/firefox/new/" title="🔥🦊">Firefox</a> for better safety and comfort.</div>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0b4eW1KAuWE" frameborder="0" allow="accelerometer; autoplay: clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen="true"></iframe>
 <br />
 Thanks to Immy for this awesome video.</center>
